// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`history core buildAllRows should return HistorizedParameter array group by date 1`] = `
{
  "changeType": "added",
  "effectiveDate": "",
  "groupedParameterHeaderContent": "Nov 2, 2022 4:00 am",
  "isGroupedParameterHeader": true,
  "latestDate": 2022-11-02T03:00:00.000Z,
  "level": 0,
  "name": "",
  "parameterDate": "",
  "previousUnit": "mg/dL",
  "previousValue": "",
  "rawData": "",
  "unit": "mg/dL",
  "value": "",
}
`;

exports[`history core buildAllRows should return HistorizedParameter array group by date 2`] = `
{
  "changeType": "deleted",
  "effectiveDate": "2022-11-02T01:00:00Z",
  "isGroupedParameterHeader": false,
  "level": 1,
  "name": "BOLUS_AGGRESSIVENESS_FACTOR",
  "parameterDate": "Nov 2, 2022 2:00 am",
  "rawData": "BOLUS_AGGRESSIVENESS_FACTOR",
  "unit": "%",
  "value": "143",
}
`;

exports[`history core buildAllRows should return HistorizedParameter array group by date 3`] = `
{
  "changeType": "updated",
  "effectiveDate": "2022-11-02T02:00:00Z",
  "isGroupedParameterHeader": false,
  "level": 1,
  "name": "LARGE_MEAL_BREAKFAST",
  "parameterDate": "Nov 2, 2022 3:00 am",
  "previousUnit": "g",
  "previousValue": "150",
  "rawData": "LARGE_MEAL_BREAKFAST",
  "unit": "g",
  "value": "150",
}
`;

exports[`history core buildAllRows should return HistorizedParameter array group by date 4`] = `
{
  "changeType": "deleted",
  "effectiveDate": "2022-11-02T03:00:00Z",
  "isGroupedParameterHeader": false,
  "level": 1,
  "name": "LARGE_MEAL_DINNER",
  "parameterDate": "Nov 2, 2022 4:00 am",
  "rawData": "LARGE_MEAL_DINNER",
  "unit": "g",
  "value": "150",
}
`;

exports[`history core buildAllRows should return HistorizedParameter array group by date 5`] = `
{
  "changeType": "added",
  "effectiveDate": "",
  "groupedParameterHeaderContent": "Nov 1, 2022 4:00 am",
  "isGroupedParameterHeader": true,
  "latestDate": 2022-11-01T03:00:00.000Z,
  "level": 0,
  "name": "",
  "parameterDate": "",
  "previousUnit": "mg/dL",
  "previousValue": "",
  "rawData": "",
  "unit": "mg/dL",
  "value": "",
}
`;

exports[`history core buildAllRows should return HistorizedParameter array group by date 6`] = `
{
  "changeType": "added",
  "effectiveDate": "2022-11-01T01:00:00Z",
  "isGroupedParameterHeader": false,
  "level": 1,
  "name": "BOLUS_AGGRESSIVENESS_FACTOR",
  "parameterDate": "Nov 1, 2022 2:00 am",
  "rawData": "BOLUS_AGGRESSIVENESS_FACTOR",
  "unit": "%",
  "value": "143",
}
`;

exports[`history core buildAllRows should return HistorizedParameter array group by date 7`] = `
{
  "changeType": "added",
  "effectiveDate": "2022-11-01T02:00:00Z",
  "isGroupedParameterHeader": false,
  "level": 1,
  "name": "LARGE_MEAL_BREAKFAST",
  "parameterDate": "Nov 1, 2022 3:00 am",
  "rawData": "LARGE_MEAL_BREAKFAST",
  "unit": "g",
  "value": "150",
}
`;

exports[`history core buildAllRows should return HistorizedParameter array group by date 8`] = `
{
  "changeType": "deleted",
  "effectiveDate": "2022-11-01T03:00:00Z",
  "isGroupedParameterHeader": false,
  "level": 1,
  "name": "LARGE_MEAL_DINNER",
  "parameterDate": "Nov 1, 2022 4:00 am",
  "rawData": "LARGE_MEAL_DINNER",
  "unit": "g",
  "value": "150",
}
`;
